@@ -1,3 +1,7 @@
 
-SUBDIRS = gizmos xrc
+if BUILD_XRC
+subdirs_xrc = xrc
+endif
+
+SUBDIRS = gizmos $(subdirs_xrc)
 
