@@ -16,6 +16,7 @@ Version 1.3.2
 - poEdit now preserves obsolete translations (Olivier Sannier)
 - added checking of input files' correctness
 - fixed parsing of "\\n" substrings in catalog headers
+- fixed compilation with wxWidgets >= 2.5.3
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
